<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 <string name="app_name">settings</string>

 <string name="model_number">Model number :</string>
 <string name="firmware_version">Android version :</string>
 <string name="kernel_version">Kernel version :</string>
 <string name="build_number">Build number : </string>
 <string name="about">About Box</string>
 <string name="internet_setting">网络设置</string>
 <string name="wifi">无线网络</string>
 <string name="wifi_open">打开Wifi</string>
 <string name="wifi_close">关闭Wifi</string>
 <string name="ethernet">有线网络</string>
 <string name="ethernet_setting">有线网络设置</string>
 <string name="ethernet_status">已连接无线网络，若连接有线请插好网线</string>
 <string name="screen_timeout_summary"><xliff:g id="timeout_description">%1$s</xliff:g> </string>
    
</resources>
