<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/about"
        android:textColor="@android:color/white"
        android:textSize="22dp"
        android:textStyle="bold" />

    <LinearLayout
        android:paddingLeft="30dp"
        android:paddingTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
         >

        <TextView
            android:id="@+id/model_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/model_number"
            android:textColor="@android:color/white"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/model_number_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/firmware_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/firmware_version"
            android:textColor="@android:color/white"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/firmware_version_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/build_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/build_number"
            android:textColor="@android:color/white"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/build_number_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/kernel_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/kernel_version"
            android:textColor="@android:color/white"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/kernel_version_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:textColor="@android:color/white"
            android:textSize="18dp" />
    </LinearLayout>



</RelativeLayout>